# Modelionn

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.gpu.yml  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/modelionn-scan/: action.yml
.github/actions/zkml-scan/: action.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  release-notes.yml  web-tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py  0003_fk_constraints_webhook_deliveries.py  0004_drop_legacy_add_zk_tables.py  0010_add_webhook_configs.py  0011_add_ondelete_cascade_to_proof_jobs.py  0012_add_composite_indexes.py  0013_partition_hash_and_fk_fix.py
cli/: main.py
docker/: Dockerfile.neuron  entrypoint.sh
docker/alertmanager/: alertmanager.yml
docker/prometheus/: alerts.yml  prometheus.yml
docs/: alert-runbooks.md  capacity-planning.md  circuit-partitioning.md  disaster-recovery.md  encryption-key-management.md  environment-setup.md  monitoring-setup.md  performance-benchmarks.md  prover-development.md  rate-limiting.md  rollback-procedure.md  secret-rotation.md  slo-targets.md  subnet-consensus.md  subnet-operations.md  testnet-deployment.md  tls-setup.md  v0.2.0-hardening.md  webhook-schema.md
grafana/: dashboard.json
prover/: Cargo.toml  pyproject.toml
prover/python/modelionn_prover/: __init__.py
prover/python/zkml_prover/: __init__.py
prover/src/: aggregate.rs  lib.rs  partition.rs  python.rs  types.rs  verify.rs
prover/src/backends/: groth16.rs  halo2.rs  mod.rs  plonk.rs  stark.rs
prover/src/gpu/: cuda.rs  metal.rs  mod.rs  rocm.rs  webgpu.rs
registry/api/: app.py  errors.py
registry/api/middleware/: __init__.py  api_key_auth.py  csrf.py  metrics.py  rate_limit.py  request_id.py  request_size.py  security_headers.py  tenant.py
registry/api/routes/: api_keys.py  audit.py  circuits.py  metrics.py  organizations.py  proofs.py  provers.py  webhooks.py
registry/core/: cache.py  config.py  deps.py  encoding.py  encryption.py  logging.py  security.py  sentry.py
registry/models/: audit.py  database.py
registry/storage/: base.py  ipfs.py
registry/tasks/: __init__.py  celery_app.py  periodic.py  proof_aggregate.py  proof_dispatch.py  prover_health.py  webhook_delivery.py
scripts/: backup.sh  benchmark_proof_pipeline.py  check_release_integrity.py  deploy_preflight.sh  register.py  restore.sh
sdk/: __init__.py  async_client.py  client.py  errors.py
subnet/base/: checkpoint.py  neuron.py
subnet/consensus/: __init__.py  engine.py
subnet/neurons/: miner.py  validator.py
subnet/protocol/: synapses.py
subnet/reward/: anti_sybil.py  scoring.py
tests/: conftest.py
tests/cli/: test_commands.py
tests/core/: test_encoding_portability.py  test_modules.py
tests/e2e/: test_proof_pipeline.py  test_real_prover.py
tests/load/: README.md  locustfile.py
tests/registry/: conftest.py  test_celery_tasks.py  test_circuits.py  test_dispatch_and_antisybil.py  test_ipfs_storage.py  test_middleware.py  test_proofs.py  test_provers.py  test_task_reliability_helpers.py  test_tenant_isolation.py  test_webhook_delivery.py
tests/sdk/: test_client.py  test_endpoints.py  test_integration.py
tests/subnet/: test_consensus.py  test_consensus_engine.py  test_miner.py  test_miner_integration.py  test_reward.py  test_validator_integration.py
web/: .env.example  Dockerfile  jest.setup.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
web/__tests__/: middleware.test.ts
web/__tests__/lib/: query-keys.test.ts  validation.test.ts
web/__tests__/pages/: admin.test.tsx  auth-signin.test.tsx  circuits-detail.test.tsx  circuits.test.tsx  leaderboard.test.tsx  prover-detail.test.tsx  search.test.tsx  settings.test.tsx
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
web/app/circuits/: page.tsx
web/app/organizations/: page.tsx
web/app/proofs/: page.tsx
web/app/provers/: page.tsx
web/app/settings/: page.tsx
web/components/: error-boundary.tsx  header.tsx  mobile-nav.tsx  providers.tsx  sidebar.tsx
web/lib/: auth.ts  query-keys.ts  realtime.ts  utils.ts  validation.ts
web/public/: robots.txt
web/types/: next-auth.d.ts
(+14 files in other folders)
