[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkml"
version = "0.2.0"
description = "The Open Intelligence Registry — incentive-native AI artifact registry on Bittensor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ZKML Contributors" }]

dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20,<1",
    "typer>=0.12,<1",
    "rich>=13,<15",
    "greenlet>=3.0,<4",
    "cryptography>=42.0,<44",
    "redis>=5.0,<6",
    "celery>=5.4,<6",
    "tenacity>=8.2,<10",
    "asyncpg>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
]
bittensor = [
    "bittensor>=7.0,<9",
]
ml = [
    "torch>=2.0",
    "transformers>=4.38",
    "datasets>=2.18",
]

[project.scripts]
zkml = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["registry", "subnet", "sdk", "cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]

[tool.mypy]
python_version = "3.10"
strict = true
