[package]
name = "zkml-prover"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated ZK proof generation engine for ZKML"
license = "MIT"
authors = ["ZKML Contributors"]

[lib]
name = "zkml_prover"
crate-type = ["cdylib", "rlib"]

[features]
default = ["groth16", "plonk", "halo2", "stark"]
groth16 = ["ark-groth16", "ark-bn254", "ark-std", "ark-ec", "ark-ff", "ark-relations", "ark-serialize", "ark-snark"]
plonk = ["ark-poly", "ark-bn254", "ark-std", "ark-ec", "ark-ff", "ark-serialize"]
halo2 = ["dep:halo2_proofs", "dep:ff", "dep:group"]
stark = ["dep:winterfell"]
cuda = ["dep:icicle-cuda-runtime", "dep:icicle-core"]
metal = []
webgpu = ["dep:wgpu"]
python = ["dep:pyo3"]

[dependencies]
# Serialization & utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Arkworks – Groth16 & PLONK
ark-groth16 = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", features = ["derive"], optional = true }
ark-poly = { version = "0.4", optional = true }
ark-snark = { version = "0.4", optional = true }

# Halo2
halo2_proofs = { version = "0.3", optional = true }
ff = { version = "0.13", optional = true }
group = { version = "0.13", optional = true }

# STARKs
winterfell = { version = "0.9", optional = true }

# GPU – CUDA (via ICICLE)
icicle-cuda-runtime = { version = "1.3", optional = true }
icicle-core = { version = "1.3", optional = true }

# GPU – WebGPU
wgpu = { version = "0.19", optional = true }

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[build-dependencies]
pyo3-build-config = { version = "0.28", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
