[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "zkml-prover"
version = "0.1.0"
description = "GPU-accelerated ZK proof engine for ZKML"
requires-python = ">=3.11"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "zkml_prover._native"
